--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 , "devDependencies": {}
 , "bin": { "bon" : "./bon.sh" }
 , "scripts": {}
-, "engines" : { "node" : "0.10.x" }
+, "engines" : { "node" : "*" }
 , "licenses":
   [ { "type": "Unlicense"
     , "url" : "http://unlicense.org"
