--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 { "name": "bon"
 , "description": "bash on node"
-, "keywords": [ "bash", "cli" ]
+, "keywords": [ "bash", "meta", "cli" ]
 , "version": "0.0.1"
 , "repository":
   { "type": "git"
