troubleshoot travis didn't npm link

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ branches:
   only:
     - active
     - master
+install: npm install
 after_install: npm link
+before_script: echo "running the tests..."
 notifications:
   email:
     recipients:
