--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ branches:
   only:
     - active
     - master
-install: npm install -g
+install:
+  - npm install -g
+  - rm -rf bats
+  - git clone https://github.com/sstephenson/bats.git
 notifications:
   email:
     recipients:
