--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 , "devDependencies": {}
 , "bin": { "bon" : "./bon.sh" }
 , "scripts":
-  { "install": "./install-g.sh"
+  { "install": "./node_modules/.bin/coffee ./install-g.coffee"
   , "preptest": "./preptest.sh"
   , "test": "bats/bin/bats -t test" }
 , "engines" : { "node" : "*" }
