--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 , "bin": { "bon" : "./bon.sh" }
 , "preferGlobal": true
 , "scripts":
-  { "install": "./node_modules/.bin/install-g"
+  { "install": "./node_modules/.bin/install-g || true"
   , "preptest": "./preptest.sh"
   , "test": "bats/bin/bats -t test" }
 , "engines" : { "node" : "*" }
